# CPPS_Circular_factory_usecases_JMS

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  jms_usecase_test.py  pyproject.toml  setup.py
src/: __init__.py  flexconveyor_system.py  streamlit_interface.py  test.py
turtle/: flexconveyor_usecase_JMS_instances.ttl  flexconveyor_usecase_jms_SHACL.ttl  fleyconveyor_usecase_JMS.ttl  report_parsed.ttl
